Add style to home component

--- a/cv/src/components/home/home.css
+++ b/cv/src/components/home/home.css
@@ -1,28 +1,67 @@
 .home {
   width: 100vw;
   height: 100vh;
-  background-color: red;
+  background-color: #d7dadf;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .home__navbar {
+  width: 100vw;
+  height: 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   outline: 2px solid white;
 }
 
 .home__control-box {
-  height: 100%;
   width: 100%;
-  background-color: #fdfdfd;
+  margin: 1rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home__profile-box {
+  width: 80vw;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -32,7 +71,7 @@
   min-height: 300px;
   min-width: 300px;
   border-radius: 50%;
-  background-color: #d4d4d4;
+  background-color: #f8f8f8;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -42,9 +81,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: absolute;
-  top: calc((100% / 4) - 120px);
-  left: calc((100% / 2) - 160px);
 }
 
 .control-box__navbar-box {
@@ -54,8 +90,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -72,5 +109,12 @@
 
 .control-box__navbar-title:hover {
   background-color: white;
+}
+
+.profile-box__article {
+  background-color: red;
+  width: 100%;
+  position: absolute;
+  display: none;
 }
 /*# sourceMappingURL=home.css.map */
