--- a/cv/src/components/home/home.scss
+++ b/cv/src/components/home/home.scss
@@ -1,22 +1,37 @@
 .home {
     width: 100vw;
     height: 100vh;
-    background-color: red;
+    background-color: rgb(215, 218, 223);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     
     &__navbar {
+        width: 100vw;
+        height: 3rem;
         display: flex;
         justify-content: space-around;
-        outline: 2px solid white;;
+        align-items: center;
+        outline: 2px solid white;
     }
 
     &__control-box {
-
-        height: 100%;
+        // height: 100%;
         width: 100%;
-        background-color: rgb(253, 253, 253);
-
+        margin: 1rem 0;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    &__profile-box {
+        width: 80vw;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
         align-items: center;
     }
 }
@@ -26,15 +41,11 @@
         min-height: 300px;
         min-width: 300px;
         border-radius: 50%;
-        background-color: rgb(212, 212, 212);
+        background-color: rgb(248, 248, 248);
 
         display: flex;
         justify-content: center;
         align-items: center;
-
-        position: absolute;
-        top: calc((100% / 4) - 120px);
-        left: calc((100% / 2) - 160px);
     }
 
     &__navbar-box {
@@ -42,7 +53,7 @@
         width: 100vw;
         height: 2rem;
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
         font-size: 0.7rem;
         background-color: orange;
@@ -57,5 +68,14 @@
         &:hover {
             background-color: white;
         }
+    }
+}
+
+.profile-box {
+    &__article {
+        background-color: red;
+        width: 100%;
+        position: absolute;
+        display: none;
     }
 }
