--- a/cv/src/components/Minimal/minimal.scss
+++ b/cv/src/components/Minimal/minimal.scss
@@ -1,1 +1,16 @@
 * {font-family: 'Fascinate', cursive;}
+
+body{
+    background-color: #000;
+    color: #fff;
+}
+
+.minimal-control-box {
+    &__navbar-title {
+        cursor: pointer;
+
+        &:hover {
+            color: rgb(170, 170, 170);
+        }
+    }
+}
