--- a/cv/src/components/Minimal/minimal.scss
+++ b/cv/src/components/Minimal/minimal.scss
@@ -1,11 +1,10 @@
-* {font-family: 'Fascinate', cursive;}
-
-body{
+body {
     background-color: #000;
     color: #fff;
 }
 
 .minimal-control-box {
+    font-family: 'Fascinate', cursive;
     &__navbar-title {
         cursor: pointer;
 
