--- a/cv/src/components/Minimal/minimal.scss
+++ b/cv/src/components/Minimal/minimal.scss
@@ -1,15 +1,60 @@
+@import '../../style/mixins';
+
 body {
+    height: 100vh;
+    width: 100vw;
     background-color: #000;
     color: #fff;
+    overflow: hidden;
 }
 
-.minimal-control-box {
-    font-family: 'Fascinate', cursive;
-    &__navbar-title {
-        cursor: pointer;
+.minimal{
+    &__control-box {
+        outline: 2px solid red;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        @include flex(column, flex-start, center);
+        min-height: 300px;
+        height: 60vh;
+        min-width: 200px;
+        width: 60vw;
+        font-family: 'Fascinate', cursive;
+        font-size: 2vmax;
 
-        &:hover {
-            color: rgb(170, 170, 170);
+        .control-box {
+            &__navbar-title {
+                cursor: pointer;
+                
+                &:hover {
+                    color: rgb(170, 170, 170);
+                }
+            }
+        }
+    }
+
+    &__profile-box {
+        
+        .profile-box {
+            &__article {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 90vw;
+                
+            }
+
+            &__languages {
+                @include flex( column, flex-start, flex-start);
+                
+                .languages {
+                    margin-bottom: -20px;
+                    // outline: 2px solid red;
+
+                }
+            }
         }
     }
 }
