--- a/cv/src/components/Minimal/minimal.css
+++ b/cv/src/components/Minimal/minimal.css
@@ -1,8 +1,8 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-color: #000;
-  color: #fff;
+  background-color: #000000;
+  color: #ffffff;
   overflow: hidden;
 }
 
