--- a/cv/src/components/Minimal/minimal.scss
+++ b/cv/src/components/Minimal/minimal.scss
@@ -1,10 +1,11 @@
 @import '../../style/mixins';
+@import '../../style/colors';
 
 body {
     height: 100vh;
     width: 100vw;
-    background-color: #000;
-    color: #fff;
+    background-color: $dark;
+    color: $light;
     overflow: hidden;
 }
 
@@ -28,7 +29,7 @@ body {
                 cursor: pointer;
                 
                 &:hover {
-                    color: rgb(170, 170, 170);
+                    color: $light-grey;
                 }
             }
         }
