--- a/cv/src/components/Minimal/minimal.scss
+++ b/cv/src/components/Minimal/minimal.scss
@@ -11,7 +11,6 @@ body {
 
 .minimal{
     &__control-box {
-        outline: 2px solid red;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -35,8 +34,7 @@ body {
         }
     }
 
-    &__profile-box {
-        
+    &__profile-box {        
         .profile-box {
             &__article {
                 position: absolute;
@@ -44,16 +42,13 @@ body {
                 left: 50%;
                 transform: translate(-50%, -50%);
                 width: 90vw;
-                
             }
 
             &__languages {
                 @include flex( column, flex-start, flex-start);
                 
                 .languages {
-                    margin-bottom: -20px;
-                    // outline: 2px solid red;
-
+                    margin: 0;
                 }
             }
         }
